Added the same flag to mandelbrot tiled example

--- a/mandelbrot-tiled/Makefile
+++ b/mandelbrot-tiled/Makefile
@@ -1,7 +1,7 @@
 export EMCC_DEBUG=1
 
 mandelbrot.js: mandelbrot.cpp
-	em++ --bind --std=c++11 mandelbrot.cpp -s WASM=1 -o mandelbrot.js
+	em++ --bind --std=c++11 mandelbrot.cpp -s WASM=1 -s "EXTRA_EXPORTED_RUNTIME_METHODS=['addOnPostRun']" -o mandelbrot.js
 
 clean:
 	rm *.js *.wasm
